--- a/index.html
+++ b/index.html
@@ -5,8 +5,40 @@
 Website</TITLE>
 <BODY>
 
-<P>AAAHAHHAHAHAHA Hi!</P>
-<P>"Red Sun, Red sun over paradise" - Red Sun (Sundowner's Theme) Metal Gear Rising</P>
+<h1> Dulce et Decorum Est (It is sweet and proper) </h1>
+
+<P>Bent double, like old beggars under sacks,</P>
+<P>Knock-kneed, coughing like hags, we cursed through sludge,</P>
+<P>Till on the haunting flares we turned our backs,</P>
+<P>And towards our distant rest began to trudge.</P>
+<P>Men marched asleep. Many had lost their boots,</P>
+<P>But limped on, blood-shod. All went lame; all blind;</P>
+<P>Drunk with fatigue; deaf even to the hoots</P>
+<P>Of gas-shells dropping softly behind.</P>
+<P></P>
+<P>Gas! GAS! Quick, boys!—An ecstasy of fumbling</P>
+<P>Fitting the clumsy helmets just in time,</P>
+<P>But someone still was yelling out and stumbling</P>
+<P>And flound’ring like a man in fire or lime.—</P>
+<P>Dim through the misty panes and thick green light,</P>
+<P>As under a green sea, I saw him drowning.</P>
+<P></P>
+<P>In all my dreams before my helpless sight,</P>
+<P>He plunges at me, guttering, choking, drowning.</P>
+<P></P>
+<P>If in some smothering dreams, you too could pace</P>
+<P>Behind the wagon that we flung him in,</P>
+<P>And watch the white eyes writhing in his face,</P>
+<P>His hanging face, like a devil’s sick of sin;</P>
+<P>If you could hear, at every jolt, the blood</P>
+<P>Come gargling from the froth-corrupted lungs,</P>
+<P>Obscene as cancer, bitter as the cud</P>
+<P>Of vile, incurable sores on innocent tongues,—</P>
+<P>My friend, you would not tell with such high zest</P>
+<P>To children ardent for some desperate glory,</P>
+<P>The old Lie: Dulce et decorum est</P>
+<P>Pro patria mori.</P>
+
 
 </BODY>
 </HTML>
