--- a/index.html
+++ b/index.html
@@ -1,8 +1,12 @@
 <!doctype HTML>
 <HTML lang="en">
-<HEADER>
-<TITLE>My
-Website</TITLE>
+<HEAD>
+<TITLE>My Website</TITLE>
+<link rel ="shortcut icon"
+href="images/favicon.png" />
+<link href="style.css" rel="stylesheet"
+type="text/css" />
+</HEAD>
 <BODY>
 
 <h1> Dulce et Decorum Est (It is sweet and proper) </h1>
