--- a/index.html
+++ b/index.html
@@ -2,10 +2,8 @@
 <HTML lang="en">
 <HEAD>
 <TITLE>My Website</TITLE>
-<link rel ="shortcut icon"
-href="images/favicon.png" />
-<link href="style.css" rel="stylesheet"
-type="text/css" />
+<link rel ="shortcut icon" href="images/favicon.png" />
+<link href="style.css" rel="stylesheet" type="text/css" />
 </HEAD>
 <BODY>
 
