--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!doctype HTML>
 <HTML lang="en">
 <HEAD>
-<TITLE>My Website</TITLE>
+<TITLE>Dulce et Decorum Est</TITLE>
 <link rel ="shortcut icon" href="images/favicon.png" />
 <link href="style.css" rel="stylesheet" type="text/css" />
 </HEAD>
 <BODY>
 
-<h1> Dulce et Decorum Est (It is sweet and proper) </h1>
+<h1> Dulce et Decorum Est (It is sweet and proper) - Wilfred Owen</h1>
 
 <P>Bent double, like old beggars under sacks,
 Knock-kneed, coughing like hags, we cursed through sludge,
