footers and divs

--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
 </HEAD>
 <BODY>
 
+<Div id="Header">
+
+</Div>
+<Div id="MainContent">
+
 <h1> Dulce et Decorum Est (It is sweet and proper) - Wilfred Owen</h1>
 
 <P>Bent double, like old beggars under sacks,
@@ -40,7 +45,14 @@ My friend, you would not tell with such high zest
 To children ardent for some desperate glory,
 The old Lie: Dulce et decorum est
 Pro patria mori.</P>
+</Div>
 
+<Div id="Footer">
+<Div id="FooterLeft">
+</Div>
+<Div id="FooterRight">
+</Div>
+</Div>
 
 </BODY>
 </HTML>
