--- a/index.html
+++ b/index.html
@@ -45,6 +45,15 @@ My friend, you would not tell with such high zest
 To children ardent for some desperate glory,
 The old Lie: Dulce et decorum est
 Pro patria mori.</P>
+<P></P>
+<P>The words 'Dulce et decorum est Pro patria mori' translated from Latin reads 'It is sweet and right to die for ones country</P>
+
+<h1> Wilfred Owen </h1>
+<P> Wilfred Owen was a service men and poet during World War 1 or 'The Great War' as it was 
+called in his time. The main subject of his speeches was anti-war, contrasting the patriotic 
+and romantiscised propaganda in the earlier stages of war. His main works consist of the 
+horrors of the trenches and gas warfare. He was killed in service, a week prior to the end
+of World War 1. </P>
 </Div>
 
 <Div id="Footer">
