--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ To children ardent for some desperate glory,
 The old Lie: Dulce et decorum est
 Pro patria mori.</P>
 <P></P>
-<P>The words 'Dulce et decorum est Pro patria mori' translated from Latin reads 'It is sweet and right to die for ones country</P>
+<P>The words 'Dulce et decorum est Pro patria mori' translated from Latin reads 'It is sweet and right to die for ones country'.</P>
 
 <h1> Wilfred Owen </h1>
 <P> Wilfred Owen was a service men and poet during World War 1 or 'The Great War' as it was 
