--- a/index.html
+++ b/index.html
@@ -14,47 +14,55 @@
 
 <h1> Dulce et Decorum Est (It is sweet and proper) - Wilfred Owen</h1>
 
-<P>Bent double, like old beggars under sacks,
-Knock-kneed, coughing like hags, we cursed through sludge,
-Till on the haunting flares we turned our backs,
-And towards our distant rest began to trudge.
-Men marched asleep. Many had lost their boots,
-But limped on, blood-shod. All went lame; all blind;
-Drunk with fatigue; deaf even to the hoots
-Of gas-shells dropping softly behind.</P>
+<P>Bent double, like old beggars under sacks, </p>
+<P>Knock-kneed, coughing like hags, we cursed through sludge,</p>
+<P>Till on the haunting flares we turned our backs,</p>
+<P>And towards our distant rest began to trudge.</p>
+<P>Men marched asleep. Many had lost their boots,</p>
+<P>But limped on, blood-shod. All went lame; all blind;</p>
+<P>Drunk with fatigue; deaf even to the hoots</p>
+<P>Of gas-shells dropping softly behind.</P>
 <P></P>
-<P>Gas! GAS! Quick, boys!—An ecstasy of fumbling
-Fitting the clumsy helmets just in time,
-But someone still was yelling out and stumbling
-And flound’ring like a man in fire or lime.—
-Dim through the misty panes and thick green light,
-As under a green sea, I saw him drowning.</P>
 <P></P>
-<P>In all my dreams before my helpless sight,
-He plunges at me, guttering, choking, drowning.</P>
+<P>Gas! GAS! Quick, boys!—An ecstasy of fumbling</p>
+<P>Fitting the clumsy helmets just in time,</p>
+<P>But someone still was yelling out and stumbling</p>
+<P>And flound’ring like a man in fire or lime.—</p>
+<P>Dim through the misty panes and thick green light,</p>
+<P>As under a green sea, I saw him drowning.</P>
 <P></P>
-<P>If in some smothering dreams, you too could pace
-Behind the wagon that we flung him in,
-And watch the white eyes writhing in his face,
-His hanging face, like a devil’s sick of sin;
-If you could hear, at every jolt, the blood
-Come gargling from the froth-corrupted lungs,
-Obscene as cancer, bitter as the cud
-Of vile, incurable sores on innocent tongues,—
-My friend, you would not tell with such high zest
-To children ardent for some desperate glory,
-The old Lie: Dulce et decorum est
-Pro patria mori.</P>
+<P></P>
+<P>In all my dreams before my helpless sight,</p>
+<P>He plunges at me, guttering, choking, drowning.</P>
+<P></P>
+<P></p>
+<P>If in some smothering dreams, you too could pace</p>
+<P>Behind the wagon that we flung him in,</p>
+<P>And watch the white eyes writhing in his face,</p>
+<P>His hanging face, like a devil’s sick of sin;</p>
+<P>If you could hear, at every jolt, the blood</p>
+<P>Come gargling from the froth-corrupted lungs,</p>
+<P>Obscene as cancer, bitter as the cud</p>
+<P>Of vile, incurable sores on innocent tongues,—</p>
+<P>My friend, you would not tell with such high zest</p>
+<P>To children ardent for some desperate glory,</p>
+<P>The old Lie: Dulce et decorum est</p>
+<P>Pro patria mori.</P>
+<P></P>
 <P></P>
 <P>The words 'Dulce et decorum est Pro patria mori' translated from Latin reads 'It is sweet and right to die for ones country'.</P>
 
 <h1> Wilfred Owen </h1>
-<P> Wilfred Owen was a service men and poet during World War 1 or 'The Great War' as it was 
-called in his time. The main subject of his speeches was anti-war, contrasting the patriotic 
-and romantiscised propaganda in the earlier stages of war. His main works consist of the 
-horrors of the trenches and gas warfare. He was killed in service, a week prior to the end
-of World War 1. </P>
+<P> Wilfred Owen was a service men and poet during World War 1 or 'The Great War' as it was called in his time. </p>
+<P> The main subject of his speeches was anti-war, contrasting the patriotic and romantiscised propaganda in the earlier stages of war. </p>
+<P> The main works consist of the horrors of the trenches and gas warfare. </p>
+<P> He was killed in service, a week prior to the end of World War 1. </P>
 </Div>
+
+<div class="button.container">
+	<button class="button button-1">Button 1</button>
+	<button class="button button-2">Button 2</button>
+</div>
 
 <Div id="Footer">
 <Div id="FooterLeft">
