--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 
 </Div>
 <Div id="MainContent">
-
-<h1> Dulce et Decorum Est (It is sweet and proper) - Wilfred Owen</h1>
-
+<div class="button.container">
+	<button class="button button-1">Dulce et Decorum Est (It is sweet and proper) - Wilfred Owen</button>
+</Div>
 <P>Bent double, like old beggars under sacks, </p>
 <P>Knock-kneed, coughing like hags, we cursed through sludge,</p>
 <P>Till on the haunting flares we turned our backs,</p>
@@ -51,18 +51,12 @@
 <P></P>
 <P></P>
 <P>The words 'Dulce et decorum est Pro patria mori' translated from Latin reads 'It is sweet and right to die for ones country'.</P>
-
-<h1> Wilfred Owen </h1>
-<P> Wilfred Owen was a service men and poet during World War 1 or 'The Great War' as it was called in his time. </p>
-<P> The main subject of his speeches was anti-war, contrasting the patriotic and romantiscised propaganda in the earlier stages of war. </p>
-<P> The main works consist of the horrors of the trenches and gas warfare. </p>
-<P> He was killed in service, a week prior to the end of World War 1. </P>
-</Div>
-
 <div class="button.container">
-	<button class="button button-1">Button 1</button>
-	<button class="button button-2">Button 2</button>
+	<button class="button button-2">Wilfred Owen</button>
 </div>
+<P> Wilfred Owen was a service man and poet during World War 1 or 'The Great War' as it was called in his time. The main subject of his speeches was anti-war, contrasting the patriotic and romantiscised propaganda </p> 
+<P> in the earlier stages of war. The main works consist of the horrors of the trenches and gas warfare. He was killed in service, a week prior to the end of World War 1. </P>
+</Div>
 
 <Div id="Footer">
 <Div id="FooterLeft">
