--- a/index.html
+++ b/index.html
@@ -1,65 +1,136 @@
-<!doctype HTML>
-<HTML lang="en">
-<HEAD>
-<TITLE>Dulce et Decorum Est</TITLE>
-<link rel ="shortcut icon" href="images/favicon.png" />
-<link href="style.css" rel="stylesheet" type="text/css" />
-</HEAD>
-<BODY>
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>BOBOBOBOBOBOBOBOBOBOBOBO</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+  </head>
+  <body>
+    
+<style>
+	.container {border: 1px solid black;}
+	.border {border: 1px solid blue;}
+	</style>
+	
+	
+<!-- NAVBAR START -->
+	
+<nav class="navbar navbar-expand-lg bg-body-tertiary">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="#">LOGO DUMMY</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="#">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Link</a>
+        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            Dropdown
+          </a>
+          <ul class="dropdown-menu">
+            <li><a class="dropdown-item" href="#">Action</a></li>
+            <li><a class="dropdown-item" href="#">Another action</a></li>
+            <li><hr class="dropdown-divider"></li>
+            <li><a class="dropdown-item" href="#">Something else here</a></li>
+          </ul>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link disabled">Disabled</a>
+        </li>
+      </ul>
+      <form class="d-flex" role="search">
+        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+        <button class="btn btn-outline-success" type="submit">Search</button>
+      </form>
+    </div>
+  </div>
+</nav>
 
-<Div id="Header">
+<!-- NAVBARD END -->
 
-</Div>
-<Div id="MainContent">
-<div class="button.container">
-	<button class="button button-1">Dulce et Decorum Est (It is sweet and proper) - Wilfred Owen</button>
-</Div>
-<P>Bent double, like old beggars under sacks, </p>
-<P>Knock-kneed, coughing like hags, we cursed through sludge,</p>
-<P>Till on the haunting flares we turned our backs,</p>
-<P>And towards our distant rest began to trudge.</p>
-<P>Men marched asleep. Many had lost their boots,</p>
-<P>But limped on, blood-shod. All went lame; all blind;</p>
-<P>Drunk with fatigue; deaf even to the hoots</p>
-<P>Of gas-shells dropping softly behind.</P>
-<P> .</P>
-<P>Gas! GAS! Quick, boys!—An ecstasy of fumbling</p>
-<P>Fitting the clumsy helmets just in time,</p>
-<P>But someone still was yelling out and stumbling</p>
-<P>And flound’ring like a man in fire or lime.—</p>
-<P>Dim through the misty panes and thick green light,</p>
-<P>As under a green sea, I saw him drowning.</P>
-<P> .</P>
-<P>In all my dreams before my helpless sight,</p>
-<P>He plunges at me, guttering, choking, drowning.</P>
-<P> .</P>
-<P>If in some smothering dreams, you too could pace</p>
-<P>Behind the wagon that we flung him in,</p>
-<P>And watch the white eyes writhing in his face,</p>
-<P>His hanging face, like a devil’s sick of sin;</p>
-<P>If you could hear, at every jolt, the blood</p>
-<P>Come gargling from the froth-corrupted lungs,</p>
-<P>Obscene as cancer, bitter as the cud</p>
-<P>Of vile, incurable sores on innocent tongues,—</p>
-<P>My friend, you would not tell with such high zest</p>
-<P>To children ardent for some desperate glory,</p>
-<P>The old Lie: Dulce et decorum est</p>
-<P>Pro patria mori.</P>
-<P> .</P>
-<P>The words 'Dulce et decorum est Pro patria mori' translated from Latin reads 'It is sweet and right to die for ones country'.</P>
-<div class="button.container">
-	<button class="button button-2">Wilfred Owen</button>
+
+
+<!-- SECTIONS HERE -->
+
+<div class="container-fluid">
+	<div class="row">
+		<div class="border col-2">
+		LFT2 col
+		</div>
+		<div class="border col-2">
+		LFT1 col
+		</div>
+	<div class="border col-2">
+		MID col
+		</div>
+	<div class="border col-2">
+		RGT1 col
+		</div>
+		<div class="border col-2">
+		RGT2 col
+		</div>
+	</div>
 </div>
-<P> Wilfred Owen was a service man and poet during World War 1 or 'The Great War' as it was called in his time. The main subject of his speeches was anti-war, contrasting the patriotic and romantiscised propaganda </p> 
-<P> in the earlier stages of war. The main works consist of the horrors of the trenches and gas warfare. He was killed in service, a week prior to the end of World War 1. </P>
-</Div>
+	
+<!-- SECTIONS END -->
 
-<Div id="Footer">
-<Div id="FooterLeft">
-</Div>
-<Div id="FooterRight">
-</Div>
-</Div>
 
-</BODY>
-</HTML>
+
+<!-- CAROUSEL START -->
+
+<div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img src="..." class="d-block w-100" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img src="..." class="d-block w-100" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img src="..." class="d-block w-100" alt="...">
+    </div>
+  </div>
+  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Previous</span>
+  </button>
+  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Next</span>
+  </button>
+</div>
+
+<!-- CAROUSEL END -->
+
+
+
+<!-- BUTTON AND OTHER FUNCTION WITH THAT MCTHING START -->
+
+
+
+
+<!-- BUTTON AND OTHER FUNCTION WITH THAT MCTHING END -->
+
+
+
+<!-- BOTTOM SECTION START -->
+
+
+
+
+<!-- BOTTOM SECTION END -->
+
+
+	
+<!-- DO NOT EDIT BELOW THIS LINE -->
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+  </body>
+</html>
