--- a/index.html
+++ b/index.html
@@ -8,21 +8,40 @@
   </head>
   <body>
     
+
+	
 <style>
 	.container {border: 1px solid black;}
 	.border {border: 1px solid blue;}
+	.navbar-brand img {height: 180px}
 	</style>
 
 <!-- NAVBAR START -->
 	
 <nav class="navbar navbar-expand-lg bg-body-tertiary">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">LOGO DUMMY</a>
+    <a class="navbar-brand" href="#"><IMG src="images\logo.png" /></a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+		<a class="icon-link" href="#">
+			<svg class="bi" aria-hidden="true"><use xlink:href="#box-seam"></use></svg>
+			Icon link
+		</a>
+		<a class="icon-link" href="#">
+			<svg class="bi" aria-hidden="true"><use xlink:href="#box-seam"></use></svg>
+			Icon link
+		</a>
+		<a class="icon-link" href="#">
+			<svg class="bi" aria-hidden="true"><use xlink:href="#box-seam"></use></svg>
+			Icon link
+		</a>
+		<a class="icon-link" href="#">
+			<svg class="bi" aria-hidden="true"><use xlink:href="#box-seam"></use></svg>
+			Icon link
+		</a>
       </ul>
     </div>
   </div>
