--- a/index.html
+++ b/index.html
@@ -1,24 +1,25 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" data-bs-theme="dark">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel ="shortcut icon" href="images/aubiofabicom.png" />
     <title>BOBOBOBOBOBOBOBOBOBOBOBO</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
   </head>
   <body>
     
-
+<div class="p-3 mb-2 bg-info">
 	
 <style>
 	.container {border: 1px solid black;}
-	.border {border: 1px solid blue;}
+	.border {border: 1px solid red;}
 	.navbar-brand img {height: 180px}
-	</style>
+</style>
 
 <!-- NAVBAR START -->
 	
-<nav class="navbar navbar-expand-lg bg-body-tertiary">
+<nav class="navbar navbar-expand-lg bg-dark">
   <div class="container-fluid">
     <a class="navbar-brand" href="#"><IMG src="images\AubioHaus.png" /></a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -56,19 +57,19 @@
 <div class="container-fluid">
 	<div class="row">
 		<div class="border col-2">
-		LFT2 col
+		How To Choose
 		</div>
 		<div class="border col-2">
-		LFT1 col
+		Interpreting Graphs
 		</div>
 	<div class="border col-2">
-		MID col
+		Forums and Etiquette
 		</div>
 	<div class="border col-2">
-		RGT1 col
+		Brands to Choose From
 		</div>
 		<div class="border col-2">
-		RGT2 col
+		How Audio is Created
 		</div>
 	</div>
 </div>
@@ -121,7 +122,7 @@
 
 <!-- BOTTOM SECTION END -->
 
-
+</div>
 	
 <!-- DO NOT EDIT BELOW THIS LINE -->
 
