--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     
-<div class="p-3 mb-2 bg-info">
+<div class="p-3 mb-2 bg-white">
 	
 <style>
 	.container {border: 1px solid black;}
@@ -18,7 +18,6 @@
 </style>
 
 <!-- NAVBAR START -->
-	
 <nav class="navbar navbar-expand-lg bg-dark">
   <div class="container-fluid">
     <a class="navbar-brand" href="#"><IMG src="images\AubioHaus.png" /></a>
@@ -47,13 +46,11 @@
     </div>
   </div>
 </nav>
-
 <!-- NAVBARD END -->
 
 
 	
 <!-- SECTIONS HERE -->
-
 <div class="container-fluid">
 	<div class="row">
 		<div class="border col-2">
@@ -73,23 +70,33 @@
 		</div>
 	</div>
 </div>
-	
 <!-- SECTIONS END -->
 
 
 
-<!-- CAROUSEL START -->
-
+<!-- BIG IMAGE START (Change to big image later) -->
 <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="..." class="d-block w-100" alt="...">
+      <img src="images\Hi-x55 Austin.jpg" class="d-block w-100" alt="...">
+	  <div class="carousel-caption d-none d-md-block">
+        <h5>First slide label</h5>
+        <p>Some representative placeholder content for the first slide.</p>
+      </div>
     </div>
     <div class="carousel-item">
-      <img src="..." class="d-block w-100" alt="...">
+      <img src="images\AubioHaus.png" class="d-block w-100" alt="...">
+	  <div class="carousel-caption d-none d-md-block">
+        <h5>First slide label</h5>
+        <p>Some representative placeholder content for the first slide.</p>
+      </div>
     </div>
     <div class="carousel-item">
-      <img src="..." class="d-block w-100" alt="...">
+      <img src="images\AubioHaus.png" class="d-block w-100" alt="...">
+	  <div class="carousel-caption d-none d-md-block">
+        <h5>First slide label</h5>
+        <p>Some representative placeholder content for the first slide.</p>
+      </div>
     </div>
   </div>
   <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
@@ -101,24 +108,17 @@
     <span class="visually-hidden">Next</span>
   </button>
 </div>
-
-<!-- CAROUSEL END -->
-
-
-
-<!-- BUTTON AND OTHER FUNCTION WITH THAT MCTHING START -->
+<!-- BIG IMAGE END -->
 
 
 
+<!-- BUTTON AND OTHER FUNCTION WITH THAT MCTHING (START) -->
 
-<!-- BUTTON AND OTHER FUNCTION WITH THAT MCTHING END -->
+<!-- BUTTON AND OTHER FUNCTION WITH THAT MCTHING (END) -->
 
 
 
 <!-- BOTTOM SECTION START -->
-
-
-
 
 <!-- BOTTOM SECTION END -->
 
