--- a/index.html
+++ b/index.html
@@ -10,7 +10,24 @@
   <body>
     
 <div class="p-3 mb-2 bg-white">
-	
+
+.position
+
+.overlay {
+	position:absolute;
+}
+
+.to-right {
+	position: absolute;
+	right:0;
+	bottom:0;
+
+.to-left {
+	position: absolute;
+	left:0;
+	bottom:0;
+
+
 <style>
 	.container {border: 1px solid black;}
 	.border {border: 1px solid red;}
@@ -54,59 +71,72 @@
 <div class="container-fluid">
 	<div class="row">
 		<div class="border col-2">
-		How To Choose
+		<div class="dropdown">
+  <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+    How To Choose
+  </button>
+  <ul class="dropdown-menu">
+    <li><button class="dropdown-item" type="button">Action</button></li>
+    <li><button class="dropdown-item" type="button">Another action</button></li>
+    <li><button class="dropdown-item" type="button">Something else here</button></li>
+  </ul>
+</div>
 		</div>
 		<div class="border col-2">
+		<button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
 		Interpreting Graphs
-		</div>
+		</button>
+  <ul class="dropdown-menu">
+    <li><button class="dropdown-item" type="button">Action</button></li>
+    <li><button class="dropdown-item" type="button">Another action</button></li>
+    <li><button class="dropdown-item" type="button">Something else here</button></li>
+  </ul>
+</div>
 	<div class="border col-2">
+	<button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
 		Forums and Etiquette
-		</div>
+		</button>
+  <ul class="dropdown-menu">
+    <li><button class="dropdown-item" type="button">Action</button></li>
+    <li><button class="dropdown-item" type="button">Another action</button></li>
+    <li><button class="dropdown-item" type="button">Something else here</button></li>
+  </ul>
+</div>
 	<div class="border col-2">
+	<button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
 		Brands to Choose From
-		</div>
+		</button>
+  <ul class="dropdown-menu">
+    <li><button class="dropdown-item" type="button">Action</button></li>
+    <li><button class="dropdown-item" type="button">Another action</button></li>
+    <li><button class="dropdown-item" type="button">Something else here</button></li>
+  </ul>
+</div>
 		<div class="border col-2">
+		<button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
 		How Audio is Created
-		</div>
+		</button>
+  <ul class="dropdown-menu">
+    <li><button class="dropdown-item" type="button">Action</button></li>
+    <li><button class="dropdown-item" type="button">Another action</button></li>
+    <li><button class="dropdown-item" type="button">Something else here</button></li>
+  </ul>
+</div>
 	</div>
 </div>
 <!-- SECTIONS END -->
 
 
 
-<!-- BIG IMAGE START (Change to big image later) -->
-<div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
-  <div class="carousel-inner">
-    <div class="carousel-item active">
-      <img src="images\Hi-x55 Austin.jpg" class="d-block w-100" alt="...">
-	  <div class="carousel-caption d-none d-md-block">
-        <h5>First slide label</h5>
-        <p>Some representative placeholder content for the first slide.</p>
-      </div>
-    </div>
-    <div class="carousel-item">
-      <img src="images\AubioHaus.png" class="d-block w-100" alt="...">
-	  <div class="carousel-caption d-none d-md-block">
-        <h5>First slide label</h5>
-        <p>Some representative placeholder content for the first slide.</p>
-      </div>
-    </div>
-    <div class="carousel-item">
-      <img src="images\AubioHaus.png" class="d-block w-100" alt="...">
-	  <div class="carousel-caption d-none d-md-block">
-        <h5>First slide label</h5>
-        <p>Some representative placeholder content for the first slide.</p>
-      </div>
-    </div>
-  </div>
-  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Previous</span>
-  </button>
-  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Next</span>
-  </button>
+<!-- BIG IMAGE START -->
+<div class="container-fluid">
+  <img src="images\Hi-x55 Austin.jpg" class="img-fluid" alt="...">
+		<div class="row overlay">
+			<div class="border col-3">
+        <h5>Updates</h5>
+        <p>Placeholder Date</p>
+			</div>
+		</div>
 </div>
 <!-- BIG IMAGE END -->
 
