--- a/index.html
+++ b/index.html
@@ -11,7 +11,17 @@
     
 <div class="p-3 mb-2 bg-white">
 
-.position
+
+
+<style>
+	.container {border: 1px solid black;}
+	
+	.border {border: 1px solid red;}
+	
+	.navbar-brand img {height: 180px}
+	
+	.position {
+
 
 .overlay {
 	position:absolute;
@@ -21,17 +31,13 @@
 	position: absolute;
 	right:0;
 	bottom:0;
+}
 
 .to-left {
 	position: absolute;
 	left:0;
 	bottom:0;
-
-
-<style>
-	.container {border: 1px solid black;}
-	.border {border: 1px solid red;}
-	.navbar-brand img {height: 180px}
+}
 </style>
 
 <!-- NAVBAR START -->
@@ -66,19 +72,20 @@
 <!-- NAVBARD END -->
 
 
-	
+
 <!-- SECTIONS HERE -->
 <div class="container-fluid">
 	<div class="row">
 		<div class="border col-2">
 		<div class="dropdown">
-  <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-    How To Choose
+  How To Choose
+  <button type="button" class="btn btn-secondary dropdown-toggle dropdown-toggle-split" data-bs-toggle="dropdown" aria-expanded="false">
+    <span class="visually-hidden">Toggle Dropdown</span>
   </button>
   <ul class="dropdown-menu">
-    <li><button class="dropdown-item" type="button">Action</button></li>
-    <li><button class="dropdown-item" type="button">Another action</button></li>
-    <li><button class="dropdown-item" type="button">Something else here</button></li>
+    <li><button class="dropdown-item" type="button">B</button></li>
+    <li><button class="dropdown-item" type="button">H</button></li>
+    <li><button class="dropdown-item" type="button">I</button></li>
   </ul>
 </div>
 		</div>
@@ -87,9 +94,9 @@
 		Interpreting Graphs
 		</button>
   <ul class="dropdown-menu">
-    <li><button class="dropdown-item" type="button">Action</button></li>
-    <li><button class="dropdown-item" type="button">Another action</button></li>
-    <li><button class="dropdown-item" type="button">Something else here</button></li>
+    <li><button class="dropdown-item" type="button"></button></li>
+    <li><button class="dropdown-item" type="button"></button></li>
+    <li><button class="dropdown-item" type="button"></button></li>
   </ul>
 </div>
 	<div class="border col-2">
@@ -97,9 +104,9 @@
 		Forums and Etiquette
 		</button>
   <ul class="dropdown-menu">
-    <li><button class="dropdown-item" type="button">Action</button></li>
-    <li><button class="dropdown-item" type="button">Another action</button></li>
-    <li><button class="dropdown-item" type="button">Something else here</button></li>
+    <li><button class="dropdown-item" type="button"></button></li>
+    <li><button class="dropdown-item" type="button"></button></li>
+    <li><button class="dropdown-item" type="button"></button></li>
   </ul>
 </div>
 	<div class="border col-2">
@@ -107,9 +114,9 @@
 		Brands to Choose From
 		</button>
   <ul class="dropdown-menu">
-    <li><button class="dropdown-item" type="button">Action</button></li>
-    <li><button class="dropdown-item" type="button">Another action</button></li>
-    <li><button class="dropdown-item" type="button">Something else here</button></li>
+    <li><button class="dropdown-item" type="button"></button></li>
+    <li><button class="dropdown-item" type="button"></button></li>
+    <li><button class="dropdown-item" type="button"></button></li>
   </ul>
 </div>
 		<div class="border col-2">
@@ -117,9 +124,9 @@
 		How Audio is Created
 		</button>
   <ul class="dropdown-menu">
-    <li><button class="dropdown-item" type="button">Action</button></li>
-    <li><button class="dropdown-item" type="button">Another action</button></li>
-    <li><button class="dropdown-item" type="button">Something else here</button></li>
+    <li><button class="dropdown-item" type="button"></button></li>
+    <li><button class="dropdown-item" type="button"></button></li>
+    <li><button class="dropdown-item" type="button"></button></li>
   </ul>
 </div>
 	</div>
@@ -129,21 +136,28 @@
 
 
 <!-- BIG IMAGE START -->
-<div class="container-fluid">
-  <img src="images\Hi-x55 Austin.jpg" class="img-fluid" alt="...">
-		<div class="row overlay">
-			<div class="border col-3">
-        <h5>Updates</h5>
-        <p>Placeholder Date</p>
+<div class="mx-auto p-2" style="fluid;">
+	<div class="container-fluid">
+			<div class="row overlay">
+				<div class="border col-3">
+					<img src="images\Hi-x55 Austin.jpg" class="img-fluid" alt="...">
+				</div>
 			</div>
-		</div>
+	</div>
 </div>
 <!-- BIG IMAGE END -->
 
 
 
 <!-- BUTTON AND OTHER FUNCTION WITH THAT MCTHING (START) -->
-
+	<div class="container-fluid">
+			<div class="row overlay">
+				<div class="border col-3">
+					<h5>Updates</h5>
+					<p>Placeholder Date</p>
+				</div>
+			</div>
+	</div>
 <!-- BUTTON AND OTHER FUNCTION WITH THAT MCTHING (END) -->
 
 
