--- a/index.html
+++ b/index.html
@@ -77,58 +77,70 @@
 <div class="container-fluid">
 	<div class="row">
 		<div class="border col-2">
-		<div class="dropdown">
-  How To Choose
-  <button type="button" class="btn btn-secondary dropdown-toggle dropdown-toggle-split" data-bs-toggle="dropdown" aria-expanded="false">
-    <span class="visually-hidden">Toggle Dropdown</span>
-  </button>
-  <ul class="dropdown-menu">
-    <li><button class="dropdown-item" type="button">B</button></li>
-    <li><button class="dropdown-item" type="button">H</button></li>
-    <li><button class="dropdown-item" type="button">I</button></li>
-  </ul>
-</div>
+			<div class="dropdown">
+				How To Choose
+				<button type="button" class="btn btn-secondary dropdown-toggle dropdown-toggle-split" data-bs-toggle="dropdown" aria-expanded="false">
+					<span class="visually-hidden">Toggle Dropdown</span>
+				</button>
+				<ul class="dropdown-menu">
+					<li><button class="dropdown-item" type="button">B</button></li>
+					<li><button class="dropdown-item" type="button">H</button></li>
+					<li><button class="dropdown-item" type="button">I</button></li>
+				</ul>
+			</div>
 		</div>
 		<div class="border col-2">
-		<button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-		Interpreting Graphs
-		</button>
-  <ul class="dropdown-menu">
-    <li><button class="dropdown-item" type="button"></button></li>
-    <li><button class="dropdown-item" type="button"></button></li>
-    <li><button class="dropdown-item" type="button"></button></li>
-  </ul>
-</div>
+			<div class="dropdown">
+				Interpreting Graphs
+				<button type="button" class="btn btn-secondary dropdown-toggle dropdown-toggle-split" data-bs-toggle="dropdown" aria-expanded="false">
+					<span class="visually-hidden">Toggle Dropdown</span>
+				</button>
+				<ul class="dropdown-menu">
+					<li><button class="dropdown-item" type="button">B</button></li>
+					<li><button class="dropdown-item" type="button">H</button></li>
+					<li><button class="dropdown-item" type="button">I</button></li>
+				</ul>
+			</div>
+		</div>
 	<div class="border col-2">
-	<button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-		Forums and Etiquette
-		</button>
-  <ul class="dropdown-menu">
-    <li><button class="dropdown-item" type="button"></button></li>
-    <li><button class="dropdown-item" type="button"></button></li>
-    <li><button class="dropdown-item" type="button"></button></li>
-  </ul>
-</div>
+			<div class="dropdown">
+				Forums and Etiquette
+				<button type="button" class="btn btn-secondary dropdown-toggle dropdown-toggle-split" data-bs-toggle="dropdown" aria-expanded="false">
+					<span class="visually-hidden">Toggle Dropdown</span>
+				</button>
+				<ul class="dropdown-menu">
+					<li><button class="dropdown-item" type="button">B</button></li>
+					<li><button class="dropdown-item" type="button">H</button></li>
+					<li><button class="dropdown-item" type="button">I</button></li>
+				</ul>
+			</div>
+		</div>
 	<div class="border col-2">
-	<button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-		Brands to Choose From
-		</button>
-  <ul class="dropdown-menu">
-    <li><button class="dropdown-item" type="button"></button></li>
-    <li><button class="dropdown-item" type="button"></button></li>
-    <li><button class="dropdown-item" type="button"></button></li>
-  </ul>
-</div>
+			<div class="dropdown">
+				Brands to Choose From
+				<button type="button" class="btn btn-secondary dropdown-toggle dropdown-toggle-split" data-bs-toggle="dropdown" aria-expanded="false">
+					<span class="visually-hidden">Toggle Dropdown</span>
+				</button>
+				<ul class="dropdown-menu">
+					<li><button class="dropdown-item" type="button">B</button></li>
+					<li><button class="dropdown-item" type="button">H</button></li>
+					<li><button class="dropdown-item" type="button">I</button></li>
+				</ul>
+			</div>
+		</div>
 		<div class="border col-2">
-		<button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-		How Audio is Created
-		</button>
-  <ul class="dropdown-menu">
-    <li><button class="dropdown-item" type="button"></button></li>
-    <li><button class="dropdown-item" type="button"></button></li>
-    <li><button class="dropdown-item" type="button"></button></li>
-  </ul>
-</div>
+			<div class="dropdown">
+				How Audio Is Created
+				<button type="button" class="btn btn-secondary dropdown-toggle dropdown-toggle-split" data-bs-toggle="dropdown" aria-expanded="false">
+					<span class="visually-hidden">Toggle Dropdown</span>
+				</button>
+				<ul class="dropdown-menu">
+					<li><button class="dropdown-item" type="button">B</button></li>
+					<li><button class="dropdown-item" type="button">H</button></li>
+					<li><button class="dropdown-item" type="button">I</button></li>
+				</ul>
+			</div>
+		</div>
 	</div>
 </div>
 <!-- SECTIONS END -->
