--- a/index.html
+++ b/index.html
@@ -38,6 +38,31 @@
 	left:0;
 	bottom:0;
 }
+
+Body {
+	font-family: 'Noto Serif Display', serif;
+}
+
+#Footer {
+	width: 802px;
+	margin-right: auto;
+	margin-left: auto;
+	height: 50px;
+}
+
+#FooterLeft {
+	float:left;
+	width:49.5%;
+	height:50px;
+	border: 1px solid green;
+}
+
+#FooterRight {
+	float:right;
+	width:49.5%;
+	height:50px;
+	border: 1px solid gray;
+}
 </style>
 
 <!-- NAVBAR START -->
@@ -75,12 +100,11 @@
 
 <!-- SECTIONS HERE -->
 <div class="container-fluid">
-	<div class="row">
 	<div class="border bg-col-12">
 		<div class="border col-2">
 			<div class="dropdown">
 				How To Choose
-				<button typ	e="button" class="btn btn-secondary dropdown-toggle dropdown-toggle-split" data-bs-toggle="dropdown" aria-expanded="false">
+				<button type="button" class="btn btn-secondary dropdown-toggle dropdown-toggle-split" data-bs-toggle="dropdown" aria-expanded="false">
 					<span class="visually-hidden">Toggle Dropdown</span>
 				</button>
 				<ul class="dropdown-menu">
@@ -149,14 +173,16 @@
 
 
 <!-- BIG IMAGE START -->
-<img src="images\Hi-x55 Austin.jpg" class="img-fluid" alt="...">
+<div class="text-center">
+  <img src="images\Hi-x55 Austin.jpg" class="img-fluid" alt="...">
+</div>
 <!-- BIG IMAGE END -->
 
 
 
 <!-- BUTTON AND OTHER FUNCTION WITH THAT MCTHING (START) -->
 <div class="container-fluid">
-	<div class="row overlay">
+	<div class="row-center">
 		<div class="border col-3">
 			<h5>Updates</h5>
 			<p>Placeholder Date</p>
@@ -167,11 +193,15 @@
 
 
 
-<!-- footer START -->
-<div class="container-fluid">
-
+<!-- Footer START -->
+ <div class="position-absolute top-50 start-50 translate-middle">
+ <div class="container-fluid">
+	<div class="Footer">
+	 BOBOBOBOBOBOBOBOBOBOBOBOBOBOBOBOBOBOBOBOBOBOBOBOBOBOBOBOB
+	</div>
 </div>
-<!-- footer END -->
+ </div>
+<!-- Footer END -->
 </div>
 	
 <!-- DO NOT EDIT BELOW THIS LINE -->
