--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel ="shortcut icon" href="images/aubiofabicom.png" />
+	<link rel ="shortcut icon" href="Images/aubiofabicom.png" />
     <title>BOBOBOBOBOBOBOBOBOBOBOBO</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
   </head>
@@ -44,31 +44,31 @@ Body {
 }
 
 #Footer {
-	width: 802px;
+	width: 100%;
 	margin-right: auto;
 	margin-left: auto;
 	height: 50px;
 }
 
 #FooterLeft {
-	float:left;
-	width:49.5%;
-	height:50px;
-	border: 1px solid green;
+	float: left; 
+	width: 50%;
+	height: 67px;
+	border: 3px solid black;
 }
 
 #FooterRight {
-	float:right;
-	width:49.5%;
-	height:50px;
-	border: 1px solid gray;
+	float: right;
+	width: 50%;
+	height: 67px;
+	border: 3px solid black;
 }
 </style>
 
 <!-- NAVBAR START -->
 <nav class="navbar navbar-expand-lg bg-dark">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#"><IMG src="images\AubioHaus.png" /></a>
+    <a class="navbar-brand" href="#"><IMG src="Images\AubioHaus.png" /></a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -100,70 +100,77 @@ Body {
 
 <!-- SECTIONS HERE -->
 <div class="container-fluid">
-	<div class="border bg-col-12">
-		<div class="border col-2">
-			<div class="dropdown">
-				How To Choose
-				<button type="button" class="btn btn-secondary dropdown-toggle dropdown-toggle-split" data-bs-toggle="dropdown" aria-expanded="false">
-					<span class="visually-hidden">Toggle Dropdown</span>
-				</button>
-				<ul class="dropdown-menu">
-					<li><button class="dropdown-item" type="button">B</button></li>
-					<li><button class="dropdown-item" type="button">H</button></li>
-					<li><button class="dropdown-item" type="button">I</button></li>
-				</ul>
+	<div class="border">
+	
+		<div class="row justify-content-evenly">
+			<div class="col-2">
+				<div class="dropdown">
+						How To Choose
+					<button type="button" class="btn btn-secondary dropdown-toggle dropdown-toggle-split" data-bs-toggle="dropdown" aria-expanded="false">
+						<span class="visually-hidden">Toggle Dropdown</span>
+					</button>
+					<ul class="dropdown-menu">
+						<li><button class="dropdown-item" type="button">B</button></li>
+						<li><button class="dropdown-item" type="button">H</button></li>
+						<li><button class="dropdown-item" type="button">I</button></li>
+					</ul>
+				</div>
 			</div>
-		</div>
-		<div class="border col-2">
-			<div class="dropdown">
-				Interpreting Graphs
-				<button type="button" class="btn btn-secondary dropdown-toggle dropdown-toggle-split" data-bs-toggle="dropdown" aria-expanded="false">
-					<span class="visually-hidden">Toggle Dropdown</span>
-				</button>
-				<ul class="dropdown-menu">
-					<li><button class="dropdown-item" type="button">B</button></li>
-					<li><button class="dropdown-item" type="button">H</button></li>
-					<li><button class="dropdown-item" type="button">I</button></li>
-				</ul>
+	
+			<div class="col-2">
+				<div class="dropdown">
+						Interpreting Graphs
+					<button type="button" class="btn btn-secondary dropdown-toggle dropdown-toggle-split" data-bs-toggle="dropdown" aria-expanded="false">
+						<span class="visually-hidden">Toggle Dropdown</span>
+					</button>
+					<ul class="dropdown-menu">
+						<li><button class="dropdown-item" type="button">B</button></li>
+						<li><button class="dropdown-item" type="button">H</button></li>
+						<li><button class="dropdown-item" type="button">I</button></li>
+					</ul>
+				</div>
 			</div>
-		</div>
-	<div class="border col-2">
-			<div class="dropdown">
-				Forums and Etiquette
-				<button type="button" class="btn btn-secondary dropdown-toggle dropdown-toggle-split" data-bs-toggle="dropdown" aria-expanded="false">
-					<span class="visually-hidden">Toggle Dropdown</span>
-				</button>
-				<ul class="dropdown-menu">
-					<li><button class="dropdown-item" type="button">B</button></li>
-					<li><button class="dropdown-item" type="button">H</button></li>
-					<li><button class="dropdown-item" type="button">I</button></li>
-				</ul>
+	
+			<div class="col-2">
+				<div class="dropdown">
+						Forums and Etiquette
+					<button type="button" class="btn btn-secondary dropdown-toggle dropdown-toggle-split" data-bs-toggle="dropdown" aria-expanded="false">
+						<span class="visually-hidden">Toggle Dropdown</span>
+					</button>
+					<ul class="dropdown-menu">
+						<li><button class="dropdown-item" type="button">B</button></li>
+						<li><button class="dropdown-item" type="button">H</button></li>
+						<li><button class="dropdown-item" type="button">I</button></li>
+					</ul>
+				</div>
 			</div>
-		</div>
-	<div class="border col-2">
-			<div class="dropdown">
-				Brands to Choose From
-				<button type="button" class="btn btn-secondary dropdown-toggle dropdown-toggle-split" data-bs-toggle="dropdown" aria-expanded="false">
-					<span class="visually-hidden">Toggle Dropdown</span>
-				</button>
-				<ul class="dropdown-menu">
-					<li><button class="dropdown-item" type="button">B</button></li>
-					<li><button class="dropdown-item" type="button">H</button></li>
-					<li><button class="dropdown-item" type="button">I</button></li>
-				</ul>
+	
+			<div class="col-2">
+				<div class="dropdown">
+						Brands to Choose From
+					<button type="button" class="btn btn-secondary dropdown-toggle dropdown-toggle-split" data-bs-toggle="dropdown" aria-expanded="false">
+						<span class="visually-hidden">Toggle Dropdown</span>
+					</button>
+					<ul class="dropdown-menu">
+						<li><button class="dropdown-item" type="button">B</button></li>
+						<li><button class="dropdown-item" type="button">H</button></li>
+						<li><button class="dropdown-item" type="button">I</button></li>
+					</ul>
+				</div>
 			</div>
-		</div>
-		<div class="border col-2">
-			<div class="dropdown">
-				How Audio Is Created
-				<button type="button" class="btn btn-secondary dropdown-toggle dropdown-toggle-split" data-bs-toggle="dropdown" aria-expanded="false">
-					<span class="visually-hidden">Toggle Dropdown</span>
-				</button>
-				<ul class="dropdown-menu">
-					<li><button class="dropdown-item" type="button">B</button></li>
-					<li><button class="dropdown-item" type="button">H</button></li>
-					<li><button class="dropdown-item" type="button">I</button></li>
-				</ul>
+	
+			<div class="col-2">
+				<div class="dropdown">
+						How Audio Is Created
+					<button type="button" class="btn btn-secondary dropdown-toggle dropdown-toggle-split" data-bs-toggle="dropdown" aria-expanded="false">
+						<span class="visually-hidden">Toggle Dropdown</span>
+					</button>
+					<ul class="dropdown-menu">
+						<li><button class="dropdown-item" type="button">B</button></li>
+						<li><button class="dropdown-item" type="button">H</button></li>
+						<li><button class="dropdown-item" type="button">I</button></li>
+					</ul>
+				</div>
 			</div>
 		</div>
 	</div>
@@ -173,8 +180,8 @@ Body {
 
 
 <!-- BIG IMAGE START -->
-<div class="text-center">
-  <img src="images\Hi-x55 Austin.jpg" class="img-fluid" alt="...">
+<div>
+	<img src="Images\Hi-x55 Austin.jpg" class="img-fluid">
 </div>
 <!-- BIG IMAGE END -->
 
@@ -194,13 +201,16 @@ Body {
 
 
 <!-- Footer START -->
- <div class="position-absolute top-50 start-50 translate-middle">
- <div class="container-fluid">
-	<div class="Footer">
-	 BOBOBOBOBOBOBOBOBOBOBOBOBOBOBOBOBOBOBOBOBOBOBOBOBOBOBOBOB
+<div id="Footer">
+	<div id="FooterLeft">
+<n> BOBOBOBOBOBOBOBOBOBOBOBOBOBOBOBOBOBOBOBOBOBOBOBOBOBOBOBOBBOBOBOBOB </n>
+<n> BOBOBOBOBOBOBOBOBOBOBOBOBOBOBOBOBOBOBOBOBOBOBOBOBOBOBOBOBBOBOBOBOB </n>
+	</div>
+	<div id="FooterRight">
+<n> BOBOBOBOBOBOBOBOBOBOBOBOBOBOBOBOBOBOBOBOBOBOBOBOBOBOBOBOBBOBOBOBOB </n>
+<n> BOBOBOBOBOBOBOBOBOBOBOBOBOBOBOBOBOBOBOBOBOBOBOBOBOBOBOBOBBOBOBOBOB </n>
 	</div>
 </div>
- </div>
 <!-- Footer END -->
 </div>
 	
