ghngHJKScgahaityun6 Joe Biden

--- a/index.html
+++ b/index.html
@@ -20,35 +20,21 @@
 	
 	.navbar-brand img {height: 180px}
 	
-	.position {
-}
-
-	.overlay {
-	position:absolute;
-}
-
-	.to-right {
-	position: absolute;
-	right:0;
-	bottom:0;
-}
-
-	.to-left {
-	position: absolute;
-	left:0;
-	bottom:0;
-}
-
-Body {
+	Body {
 	font-family: 'Noto Serif Display', serif;
-}
+	font-style: text-body-
+	}
 
-#Footer {
+	img-fluid {
+	width: auto;
+	}
+	
+	#Footer {
 	width: 100%;
 	margin-right: auto;
 	margin-left: auto;
 	height: 50px;
-}
+	}
 
 #FooterLeft {
 	float: left; 
@@ -73,24 +59,30 @@ Body {
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-		<a class="icon-link" href="#">
-			<svg class="bi" aria-hidden="true"><use xlink:href="#box-seam"></use></svg>
-			Icon link
-		</a>
-		<a class="icon-link" href="#">
-			<svg class="bi" aria-hidden="true"><use xlink:href="#box-seam"></use></svg>
-			Icon link
-		</a>
-		<a class="icon-link" href="#">
-			<svg class="bi" aria-hidden="true"><use xlink:href="#box-seam"></use></svg>
-			Icon link
-		</a>
-		<a class="icon-link" href="#">
-			<svg class="bi" aria-hidden="true"><use xlink:href="#box-seam"></use></svg>
-			Icon link
-		</a>
-      </ul>
+		<nav>
+			<div class="elementor-element elementor-element-b0e3ecd e-con-full e-con" data-id="b0e3ecd" data-element_type="container" data-settings="{&quot;content_width&quot;:&quot;full&quot;}">
+				<div class="elementor-element elementor-element-77ce78e e-grid-align-right e-grid-align-tablet-right elementor-shape-rounded elementor-grid-0 elementor-widget elementor-widget-social-icons elementor-sticky" data-id="77ce78e" data-element_type="widget" data-settings="{&quot;sticky&quot;:&quot;top&quot;,&quot;sticky_on&quot;:[&quot;mobile&quot;],&quot;sticky_offset&quot;:23,&quot;sticky_effects_offset&quot;:0}" data-widget_type="social-icons.default">
+					<div class="elementor-widget-container">
+						<span class="elementor-grid-item">
+							<a class="elementor-icon elementor-social-icon elementor-social-icon-reddit elementor-animation-grow elementor-repeater-item-cadc557" href="https://www.google.com/" target="_blank">
+							<span class="elementor-screen-only">Reddit</span>
+							<svg class="e-font-icon-svg e-fab-reddit" viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg"><path d="M201.5 305.5c-13.8 0-24.9-11.1-24.9-24.6 0-13.8 11.1-24.9 24.9-24.9 13.6 0 24.6 11.1 24.6 24.9 0 13.6-11.1 24.6-24.6 24.6zM504 256c0 137-111 248-248 248S8 393 8 256 119 8 256 8s248 111 248 248zm-132.3-41.2c-9.4 0-17.7 3.9-23.8 10-22.4-15.5-52.6-25.5-86.1-26.6l17.4-78.3 55.4 12.5c0 13.6 11.1 24.6 24.6 24.6 13.8 0 24.9-11.3 24.9-24.9s-11.1-24.9-24.9-24.9c-9.7 0-18 5.8-22.1 13.8l-61.2-13.6c-3-.8-6.1 1.4-6.9 4.4l-19.1 86.4c-33.2 1.4-63.1 11.3-85.5 26.8-6.1-6.4-14.7-10.2-24.1-10.2-34.9 0-46.3 46.9-14.4 62.8-1.1 5-1.7 10.2-1.7 15.5 0 52.6 59.2 95.2 132 95.2 73.1 0 132.3-42.6 132.3-95.2 0-5.3-.6-10.8-1.9-15.8 31.3-16 19.8-62.5-14.9-62.5zM302.8 331c-18.2 18.2-76.1 17.9-93.6 0-2.2-2.2-6.1-2.2-8.3 0-2.5 2.5-2.5 6.4 0 8.6 22.8 22.8 87.3 22.8 110.2 0 2.5-2.2 2.5-6.1 0-8.6-2.2-2.2-6.1-2.2-8.3 0zm7.7-75c-13.6 0-24.6 11.1-24.6 24.9 0 13.6 11.1 24.6 24.6 24.6 13.8 0 24.9-11.1 24.9-24.6 0-13.8-11-24.9-24.9-24.9z"></path></svg> </a>
+						</span>
+						<span class="elementor-grid-item">
+							<a class="elementor-icon elementor-social-icon elementor-social-icon-instagram elementor-animation-grow elementor-repeater-item-80f5ce7" href="https://www.google.com/" target="_blank">
+							<span class="elementor-screen-only">Instagram</span>
+							<svg class="e-font-icon-svg e-fab-instagram" viewBox="0 0 448 512" xmlns="http://www.w3.org/2000/svg"><path d="M224.1 141c-63.6 0-114.9 51.3-114.9 114.9s51.3 114.9 114.9 114.9S339 319.5 339 255.9 287.7 141 224.1 141zm0 189.6c-41.1 0-74.7-33.5-74.7-74.7s33.5-74.7 74.7-74.7 74.7 33.5 74.7 74.7-33.6 74.7-74.7 74.7zm146.4-194.3c0 14.9-12 26.8-26.8 26.8-14.9 0-26.8-12-26.8-26.8s12-26.8 26.8-26.8 26.8 12 26.8 26.8zm76.1 27.2c-1.7-35.9-9.9-67.7-36.2-93.9-26.2-26.2-58-34.4-93.9-36.2-37-2.1-147.9-2.1-184.9 0-35.8 1.7-67.6 9.9-93.9 36.1s-34.4 58-36.2 93.9c-2.1 37-2.1 147.9 0 184.9 1.7 35.9 9.9 67.7 36.2 93.9s58 34.4 93.9 36.2c37 2.1 147.9 2.1 184.9 0 35.9-1.7 67.7-9.9 93.9-36.2 26.2-26.2 34.4-58 36.2-93.9 2.1-37 2.1-147.8 0-184.8zM398.8 388c-7.8 19.6-22.9 34.7-42.6 42.6-29.5 11.7-99.5 9-132.1 9s-102.7 2.6-132.1-9c-19.6-7.8-34.7-22.9-42.6-42.6-11.7-29.5-9-99.5-9-132.1s-2.6-102.7 9-132.1c7.8-19.6 22.9-34.7 42.6-42.6 29.5-11.7 99.5-9 132.1-9s102.7-2.6 132.1 9c19.6 7.8 34.7 22.9 42.6 42.6 11.7 29.5 9 99.5 9 132.1s2.7 102.7-9 132.1z"></path></svg> </a>
+						</span>
+						<span class="elementor-grid-item">
+<a class="elementor-icon elementor-social-icon elementor-social-icon-youtube elementor-animation-grow elementor-repeater-item-1304693" href="https://www.google.com/" target="_blank">
+<span class="elementor-screen-only">Youtube</span>
+<svg class="e-font-icon-svg e-fab-youtube" viewBox="0 0 576 512" xmlns="http://www.w3.org/2000/svg"><path d="M549.655 124.083c-6.281-23.65-24.787-42.276-48.284-48.597C458.781 64 288 64 288 64S117.22 64 74.629 75.486c-23.497 6.322-42.003 24.947-48.284 48.597-11.412 42.867-11.412 132.305-11.412 132.305s0 89.438 11.412 132.305c6.281 23.65 24.787 41.5 48.284 47.821C117.22 448 288 448 288 448s170.78 0 213.371-11.486c23.497-6.321 42.003-24.171 48.284-47.821 11.412-42.867 11.412-132.305 11.412-132.305s0-89.438-11.412-132.305zm-317.51 213.508V175.185l142.739 81.205-142.739 81.201z"></path></svg> </a>
+</span>
+</div>
+</div>
+</div>
+</div>
+</nav>
     </div>
   </div>
 </nav>
@@ -101,7 +93,6 @@ Body {
 <!-- SECTIONS HERE -->
 <div class="container-fluid">
 	<div class="border">
-	
 		<div class="row justify-content-evenly">
 			<div class="col-2">
 				<div class="dropdown">
@@ -110,9 +101,9 @@ Body {
 						<span class="visually-hidden">Toggle Dropdown</span>
 					</button>
 					<ul class="dropdown-menu">
-						<li><button class="dropdown-item" type="button">B</button></li>
-						<li><button class="dropdown-item" type="button">H</button></li>
-						<li><button class="dropdown-item" type="button">I</button></li>
+						<li><button class="dropdown-item" type="button">What your looking for</button></li>
+						<li><button class="dropdown-item" type="button">The Reviews</button></li>
+						<li><button class="dropdown-item" type="button">Some other stuff</button></li>
 					</ul>
 				</div>
 			</div>
@@ -124,9 +115,9 @@ Body {
 						<span class="visually-hidden">Toggle Dropdown</span>
 					</button>
 					<ul class="dropdown-menu">
-						<li><button class="dropdown-item" type="button">B</button></li>
-						<li><button class="dropdown-item" type="button">H</button></li>
-						<li><button class="dropdown-item" type="button">I</button></li>
+						<li><button class="dropdown-item" type="button">What things mean</button></li>
+						<li><button class="dropdown-item" type="button">What good and what ain't</button></li>
+						<li><button class="dropdown-item" type="button">Juan</button></li>
 					</ul>
 				</div>
 			</div>
@@ -138,9 +129,8 @@ Body {
 						<span class="visually-hidden">Toggle Dropdown</span>
 					</button>
 					<ul class="dropdown-menu">
-						<li><button class="dropdown-item" type="button">B</button></li>
-						<li><button class="dropdown-item" type="button">H</button></li>
-						<li><button class="dropdown-item" type="button">I</button></li>
+						<li><button class="dropdown-item" type="button">What to do</button></li>
+						<li><button class="dropdown-item" type="button">Why it's important</button></li>
 					</ul>
 				</div>
 			</div>
@@ -152,9 +142,9 @@ Body {
 						<span class="visually-hidden">Toggle Dropdown</span>
 					</button>
 					<ul class="dropdown-menu">
-						<li><button class="dropdown-item" type="button">B</button></li>
-						<li><button class="dropdown-item" type="button">H</button></li>
-						<li><button class="dropdown-item" type="button">I</button></li>
+						<li><button class="dropdown-item" type="button"></button></li>
+						<li><button class="dropdown-item" type="button"></button></li>
+						<li><button class="dropdown-item" type="button"></button></li>
 					</ul>
 				</div>
 			</div>
