--- a/index.html
+++ b/index.html
@@ -190,16 +190,11 @@
 
 
 <!-- Footer START -->
-<div id="Footer">
-	<div id="FooterLeft">
-<n> BOBOBOBOBOBOBOBOBOBOBOBOBOBOBOBOBOBOBOBOBOBOBOBOBOBOBOBOBBOBOBOBOB </n>
-<n> BOBOBOBOBOBOBOBOBOBOBOBOBOBOBOBOBOBOBOBOBOBOBOBOBOBOBOBOBBOBOBOBOB </n>
+<footer>
+	<div class="container-fluid footer py-3">
+		BOBOBOBOBOBOBBOBOBOBOBOBOBBOBOBOBOBOBOBOBOBBOBOBOBOBOBOBOBOBOBOOBOBOBOBOBOBOBOBO
 	</div>
-	<div id="FooterRight">
-<n> BOBOBOBOBOBOBOBOBOBOBOBOBOBOBOBOBOBOBOBOBOBOBOBOBOBOBOBOBBOBOBOBOB </n>
-<n> BOBOBOBOBOBOBOBOBOBOBOBOBOBOBOBOBOBOBOBOBOBOBOBOBOBOBOBOBBOBOBOBOB </n>
-	</div>
-</div>
+</footer>
 <!-- Footer END -->
 </div>
 	
