--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@
 }
 </style>
 
-<!-- NAVBAR START -->
+<!-- NAVBAR START (change the icons to nav item)-->
 <nav class="navbar navbar-expand-lg bg-dark">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#"><IMG src="Images\AubioHaus.png" /></a>
+		<a class="navbar-brand" href="#"><IMG src="Images\AubioHaus.png" /></a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -143,7 +143,7 @@
 					<ul class="dropdown-menu">
 						<li><button class="dropdown-item" type="button">Big Brands</button></li>
 						<li><button class="dropdown-item" type="button">Trusted Brands</button></li>
-						<li><button class="dropdown-item" type="button"></button></li>
+						<li><button class="dropdown-item" type="button">AAAAAAAAAAAAAAAAAAAAAAA</button></li>
 					</ul>
 				</div>
 			</div>
@@ -179,12 +179,8 @@
 
 <!-- BUTTON AND OTHER FUNCTION WITH THAT MCTHING (START) -->
 <div class="container-fluid">
-	<div class="row-center">
-		<div class="border col-3">
-			<h5>Updates</h5>
-			<p>Placeholder Date</p>
-		</div>
-	</div>
+	<n> New Update	</n>
+	<n> Placeholder Date </n>
 </div>
 <!-- BUTTON AND OTHER FUNCTION WITH THAT MCTHING (END) -->
 
